fix: harden AI workflows and full-stack consistency